2003-10-20  Bruno Haible  <bruno@clisp.org>

	* wait-process.m4: New file.

2003-10-14  Bruno Haible  <bruno@clisp.org>

	* sig_atomic_t: New file, from GNU gettext.
	* fatal-signal.m4 (gl_FATAL_SIGNAL): Require gt_TYPE_SIG_ATOMIC_T.

2003-10-12  Paul Eggert  <eggert@twinsun.com>

	* xalloc.m4 (gl_PREREQ_XMALLOC): Require AC_C_INLINE.

2003-10-10  Simon Josefsson  <jas@extundo.com>

	* argp.m4: Add AC_C_INLINE.

2003-10-08  Paul Eggert  <eggert@twinsun.com>

	* getpass.m4 (gl_PREREQ_GETPASS): Check for stdio_ext.h.

2003-10-06  Bruno Haible  <bruno@clisp.org>

	* fatal-signal.m4: New file.
	* signalblocking.m4: New file, from GNU gettext.

2003-09-27  Paul Eggert  <eggert@twinsun.com>

	* free.m4: New file.

2003-09-26  Bruno Haible  <bruno@clisp.org>

	* stpncpy.m4 (gl_FUNC_STPNCPY): Add comments about the AIX stpncpy().
	Don't define stpncpy through config.h; it's now done through stpncpy.h.

2003-09-25  Simon Josefsson  <jas@extundo.com>
            Bruno Haible  <bruno@clisp.org>

	* getdomainname.m4: New file.

2003-09-17  Paul Eggert  <eggert@twinsun.com>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Call AC_BEFORE first,
	to avoid spurious warnings like "AC_RUN_IFELSE was called before
	gl_USE_SYSTEM_EXTENSIONS" from autoreconf.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* error.m4: Require AC_FUNC_STRERROR_R rather than invoking it.

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Require AC_AIX
	and AC_MINIX, too, so that their extensions are available.

	* prereq.m4 (jm_PREREQ_ADDEXT): Remove.  All uses removed.
	This macro has been superseded by gl_BACKUPFILE.

	More patches to assume C89 or better.

	* error.m4 (gl_ERROR): Don't check for vprintf.

	* check-decl.m4 (jm_CHECK_DECLS): Include <string.h>, <stdlib.h>
	unconditionally.
	* closeout.m4 (gl_CLOSEOUT): Don't check for stdlib.h.
	* gettimeofday.m4 (AC_FUNC_GETTIMEOFDAY_CLOBBER):
	Include <string.h>, <stdlib.h> unconditionally.
	* lstat.m4 (gl_PREREQ_LSTAT): Don't check for stdlib.h, free.